# lambda-calculus

./: .gitignore  Eval.hs  LICENSE  Main.hs  README.md  lambda-calculus.cabal
Parsing/: Ast.hs  Tokenizer.hs
src/: Enviroment.hs  Eval.hs  LambdaExpr.hs  Main.hs  Parser.hs  Repl.hs  State.hs  env.lambda  lambdaenv  test.txt
src/Parsing/: Parser.hs  ParsingTree.hs  Tokenizer.hs
